name:                manicure
version:             0.1.0.0
synopsis:            
license:             AGPL-3
license-file:        LICENSE
author:              inkyu lee
maintainer:          gofiri@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

test-suite spec
  ghc-options:       -fllvm -ddump-deriv
  hs-source-dirs:    spec
  main-is:           Spec.hs
  type:              exitcode-stdio-1.0
  build-depends:     base
                   , hspec
                   , bytestring
                   , manicure
                   , hspec
                   , containers
                   , attoparsec
  default-language:  Haskell2010
library 
  ghc-options:       -fllvm -auto-all
  exposed-modules:   Core.Request
                   , Core.Response
                   , Core.Route
                   , Core.Http
                   , Core.Html
                   , Core.Database
                   , Core.Session
                   , Core.ByteString
                   , Core.Json
                   , Core.Parser
                   , Core.Markdown
                   , Core.Model
                   , Core.Launcher
  build-depends:     base
                   , network
                   , directory
                   , bytestring
                   , utf8-string
                   , http-types
                   , unix
                   , template-haskell
                   , monad-control
                   , attoparsec
                   , mtl
                   , text
                   , transformers
                   , containers
                   , time
                   , mongoDB
                   , bson
                   , hedis
                   , cryptohash
                   , wreq
                   , lens
  hs-source-dirs:    src
  default-language:  Haskell2010
